# py-local-git-pull

./: .gitignore  AGENTS.md  AGENT_LEARNINGS.md  LICENSE  README.md  pyproject.toml  setup.py
docs/superpowers/plans/: 2026-03-31-full-refactor.md  2026-03-31-task-console-cli-redesign.md
docs/superpowers/specs/: 2026-03-31-full-refactor-design.md  2026-03-31-task-console-cli-redesign-design.md
py_local_git_pull/: __init__.py  __main__.py  main.py
py_local_git_pull/cli/: __init__.py  app.py  doctor.py  runs.py  scan.py  sync.py
py_local_git_pull/config/: cli_parser.py  constants.py  defaults.py
py_local_git_pull/core/: __init__.py  branch_syncer.py  git_executor.py  git_manager.py  models.py  repo_finder.py  result_model.py  sync_options.py
py_local_git_pull/core/discovery/: __init__.py  repo_finder.py
py_local_git_pull/core/failure/: __init__.py  catalog.py
py_local_git_pull/core/git/: __init__.py  branch.py  info.py  remote.py  runner.py  stash.py
py_local_git_pull/core/services/: inspector.py  sync_service.py
py_local_git_pull/exceptions/: __init__.py  errors.py  git_exceptions.py  sync_exceptions.py
py_local_git_pull/runtime/: __init__.py  doctor.py  executor.py  journal.py
py_local_git_pull/state/: __init__.py  paths.py
py_local_git_pull/ui/: __init__.py  console.py  dashboard.py  display.py  doctor_view.py  events.py  interactive.py  live.py  progress.py  runs_view.py  scan_view.py  summary.py  sync_view.py
py_local_git_pull/utils/: logger.py  logging_config.py
tests/: test_branch_syncer.py  test_cli_parser.py  test_display.py  test_git_executor.py  test_git_manager_remote_cache.py  test_main_output.py  test_repo_finder.py  test_result_model.py  test_sync_options.py
tests/commands/: test_app.py  test_doctor_command.py  test_readme_contract.py  test_runs_command.py  test_scan_command.py  test_sync_command.py
tests/core/: test_failure_catalog.py  test_models.py  test_repo_inspector.py  test_sync_planner.py
tests/core/git/: test_branch.py  test_info.py  test_remote.py  test_runner.py  test_stash.py
tests/core/services/: __init__.py  test_sync_service.py
tests/runtime/: test_doctor.py  test_executor.py  test_journal.py
tests/state/: test_paths.py
tests/ui/: test_doctor_view.py  test_interactive.py  test_live.py  test_summary_render.py
