[project]
name = "py-local-git-pull"
version = "0.3.0"
description = "一个功能强大的本地Git仓库同步工具，支持批量同步多个仓库和多个分支"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "tenacity>=9.0.0",
    "structlog>=24.1.0",
    "anyio>=4.0.0",
    "platformdirs>=4.3.8",
]
license = { text = "MIT License" }

authors = [{ name = "crper", email = "crper@outlook.com" }]

[project.scripts]
py-local-git-pull = "py_local_git_pull.main:main"
git-sync = "py_local_git_pull.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["py_local_git_pull*"]

[dependency-groups]
dev = ["ruff>=0.15.5", "pytest>=9.0.2"]

[tool.ruff]
target-version = "py313"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "B"]
